--- a/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
+++ b/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MQTTnet" Version="3.0.5" />
+    <PackageReference Include="MQTTnet" Version="3.0.6-beta1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
