Updated MQTTnet to 3.0.8.

--- a/CreateHashes/CreateHashes.csproj
+++ b/CreateHashes/CreateHashes.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Hashing\Hashing.csproj" />
   </ItemGroup>
 
