--- a/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
+++ b/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
@@ -19,7 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MQTTnet" Version="3.0.6-beta1" />
+    <PackageReference Include="GitVersionTask" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="MQTTnet" Version="3.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
