--- a/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
+++ b/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
@@ -19,12 +19,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersionTask" Version="5.0.1">
+    <PackageReference Include="GitVersionTask" Version="5.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MQTTnet" Version="3.0.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
