--- a/src/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
+++ b/src/NetCoreMQTTExampleJsonConfigHashedPasswords/NetCoreMQTTExampleJsonConfigHashedPasswords.csproj
@@ -34,6 +34,8 @@
     <PackageReference Include="MQTTnet" Version="4.1.0.247" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
   </ItemGroup>
